# eddic

./: .cproject  .gitignore  .gitmodules  .makefile.swp  .project  AUTHORS  BoostTestTargets.cmake  ByteCode.h  CMakeLists.txt  CONTRIBUTING.md  ChangeLog  Compiler.cpp  Doxyfile  Doxyfile.in  LICENSE  Lexer.cpp  Makefile  README  README.md  README.rst  Rerun.cmake  cases  eddic  makefile  perf.data.old  sonar-project.properties  test_list  tests.mk  tmp.mk
eddi_applications/hangman/: hangman.eddi
eddi_samples/: arrays.eddi  asm.eddi  assembly.eddi  big.eddi  bool.eddi  bool_pointers.eddi  casts.eddi  compound.eddi  concat.eddi  const.eddi  constant_parameters.eddi  constant_print.eddi  empty.eddi  errors.eddi  escapes.eddi  float.eddi  functions.eddi  global_propagation.eddi  global_sizes.eddi  grammar.eddi  hangman.eddi  identifiers.eddi  inc.eddi  includes.eddi  lex.eddi  little_float.eddi  loops.eddi  main.eddi  memset.eddi  optimize.eddi  params_assign.eddi  problem.eddi  read_cmd.eddi  registers.eddi  structures.eddi  ternary.eddi  test_structures.eddi  type_check.eddi  unroll.eddi  warnings.eddi  (+1 more)
functions/: x86_32_alloc.s  x86_32_concat.s  x86_32_duration.s  x86_32_eddi_alloc.s  x86_32_free.s  x86_32_init.s  x86_32_printB.s  x86_32_printC.s  x86_32_printF.s  x86_32_printI.s  x86_32_printS.s  x86_32_println.s  x86_32_printlnB.s  x86_32_printlnC.s  x86_32_printlnF.s  x86_32_printlnI.s  x86_32_printlnS.s  x86_32_read_char.s  x86_32_time.s  x86_64_alloc.s  x86_64_concat.s  x86_64_duration.s  x86_64_eddi_alloc.s  x86_64_free.s  x86_64_init.s  x86_64_printB.s  x86_64_printC.s  x86_64_printF.s  x86_64_printI.s  x86_64_printS.s  x86_64_println.s  x86_64_printlnB.s  x86_64_printlnC.s  x86_64_printlnF.s  x86_64_printlnI.s  x86_64_printlnS.s  x86_64_read_char.s  x86_64_time.s
include/: .ByteCodeFileWriter.h.swp  .Compiler.h.swo  .Compiler.h.swp  .Nodes.h.swp  .ParseNode.h.swo  .ParseNode.h.swp  .StringPool.h.swp  ASTVisitor.hpp  Addition.hpp  Assembler.hpp  AssemblyFileWriter.hpp  Assignment.h  Assignment.hpp  BackEnd.hpp  BackEnds.hpp  BaseType.hpp  BinaryOperator.hpp  BlockContext.hpp  BooleanCondition.hpp  Branches.hpp  ByteCodeFileWriter.h  ByteCodeFileWriter.hpp  Call.h  Compiler.h  Compiler.hpp  CompilerException.h  CompilerException.hpp  Condition.hpp  Context.hpp  ContextAnnotator.hpp  DebugStopWatch.hpp  DebugTimer.hpp  DebugVisitor.hpp  Declaration.h  Declaration.hpp  DefaultValues.hpp  DependenciesResolver.hpp  Division.hpp  EDDIFrontEnd.hpp  Else.hpp  (+107 more)
include/asm/: CodeGenerator.hpp  CodeGeneratorFactory.hpp  IntelAssemblyUtils.hpp  IntelCodeGenerator.hpp  IntelStatementCompiler.hpp  IntelX86CodeGenerator.hpp  IntelX86_64CodeGenerator.hpp  PseudoRegisters.hpp  Registers.hpp  StringConverter.hpp
include/ast/: ASTVisitor.hpp  ArrayAssignment.hpp  ArrayDeclaration.hpp  ArrayType.hpp  ArrayValue.hpp  Assignment.hpp  BinaryCondition.hpp  Boolean.hpp  BuiltinOperator.hpp  Cast.hpp  CharLiteral.hpp  CharLitteral.hpp  ComposedValue.hpp  CompoundAssignment.hpp  Condition.hpp  Constructor.hpp  ContextAnnotator.hpp  ContextAwarePass.hpp  DebugVisitor.hpp  Declaration.hpp  DefaultCase.hpp  DefaultValues.hpp  Deferred.hpp  Delete.hpp  DependenciesResolver.hpp  DereferenceAssignment.hpp  DereferenceValue.hpp  DereferenceVariableValue.hpp  Destructor.hpp  DoWhile.hpp  Else.hpp  ElseIf.hpp  Equals.hpp  Expression.hpp  False.hpp  Float.hpp  For.hpp  Foreach.hpp  ForeachIn.hpp  FunctionCall.hpp  (+89 more)
include/commons/: .ByteCode.h.swp  ByteCode.h  ByteCode.hpp  IO.h  Timer.h  Types.hpp  Utils.h
include/il/: AllocFunction.hpp  BaseStackOperand.hpp  Call.hpp  Compare.hpp  ConcatFunction.hpp  DataSection.hpp  FunctionDeclaration.hpp  FunctionExit.hpp  GlobalArray.hpp  GlobalIntVariable.hpp  GlobalOperand.hpp  GlobalStringVariable.hpp  ImmediateOperand.hpp  Instruction.hpp  InstructionFactory.hpp  InstructionFactory32.hpp  IntermediateProgram.hpp  Jump.hpp  Label.hpp  Labels.hpp  Main.hpp  Math.hpp  Move.hpp  Operand.hpp  Operands.hpp  Pop.hpp  PrintIntegerFunction.hpp  PrintLineFunction.hpp  PrintStringFunction.hpp  Push.hpp  Register.hpp  RegisterOperand.hpp  StackOperand.hpp  TargetMachine.hpp  ValueOfOperand.hpp
include/lexer/: SpiritLexer.hpp  adapttokens.hpp  position.hpp  static_lexer.hpp
include/logging/: FileOutput.h  Logger.h  LoggerLevel.h  OutputLevelRunTimeSwitch.h  OutputStream.h  StdOutput.h  logging.h  loggingConfigAVR.h  loggingConfigGeneralPurposeOS.h
include/ltac/: AbstractRegisterManager.hpp  Address.hpp  Argument.hpp  BasicBlock.hpp  Call.hpp  Compiler.hpp  FloatRegister.hpp  Function.hpp  Instruction.hpp  (+22 more)
kernels/: bench.sh  bubble_sort.eddi  insertion_sort.eddi  sort.eddi
samples/: arrays.eddi  asm.eddi  assembly.eddi  big.eddi  bool.eddi  branches.eddi  builtin.eddi  casts.eddi  compound.eddi  concat.eddi  const.eddi  float.eddi  functions.eddi  identifiers.eddi  inc.eddi  includes.eddi  incorrectcall.eddi  invalidcall.eddi  lex.eddi  little_float.eddi  main.eddi  optimize.eddi  simple.eddi  slow_optimize.eddi  sort.eddi  structures.eddi  type_check.eddi
src/: .ByteCodeFileWriter.cpp.swp  .Compiler.cpp.swp  .Nodes.cpp.swp  .ParseNode.cpp.swp  .StringPool.cpp.swp  Addition.cpp  Assembler.cpp  AssemblyFileWriter.cpp  Assignment.cpp  BackEnd.cpp  BackEnds.cpp  BinaryOperator.cpp  BlockContext.cpp  Branches.cpp  ByteCode.cpp  ByteCodeFileWriter.cpp  Compiler.cpp  Compiler.h  CompilerException.cpp  Context.cpp  ContextAnnotator.cpp  DebugVisitor.cpp  Declaration.cpp  DefaultValues.cpp  DependenciesResolver.cpp  Division.cpp  EDDIFrontEnd.cpp  ElseIf.cpp  FloatPool.cpp  For.cpp  Foreach.cpp  FrontEnd.cpp  FrontEnds.cpp  Function.cpp  FunctionCall.cpp  FunctionChecker.cpp  FunctionContext.cpp  FunctionTable.cpp  Functions.cpp  FunctionsAnnotator.cpp  (+71 more)
stdlib/: arrays.eddi  limits.eddi  linked_list.eddi  math.eddi  print.eddi  strings.eddi  timer.eddi  vector.eddi
test/: FunctionTest.cpp  IntegrationTests.cpp  UtilsTest.cpp
tools/: aggregate.awk  boost-junit.xsl  cases.sh  ci-build.sh  generate_tests.sh  stats.sh  test_report.sh  time_parsing.sh  timing.sh
(+492 files in other folders)
